# portal-tools

./: .pre-commit-config.yaml  framework.json  pyproject.toml
.github/workflows/: publish.yml
portal_tool/: __main__.py  git_manager.py  models.py  module.py  singleton.py  tool.py  vcpkg_port.py
portal_tool/templates/module/: CMakeLists.txt.j2  config.cmake.in.j2
portal_tool/templates/vcpkg/: usage.j2  vcpkg.json.j2
ports/portal-application/: vcpkg.json
ports/portal-core/: vcpkg.json
ports/portal-engine/: vcpkg.json
ports/portal-input/: vcpkg.json
ports/portal-networking/: vcpkg.json
ports/portal-serialization/: vcpkg.json
shit/ports/portal-application/: vcpkg.json
src/portal_tool/: git_manager.py  models.py  tool.py  vcpkg_port.py
src/portal_tool/framework/: framework_manager.py
src/portal_tool/installer/: configurator_factory.py  installer.py
src/portal_tool/installer/configurators/: configurator.py  configurator_protocol.py  linux_configurator.py  mac_configurator.py  windows_configurator.py
src/portal_tool/installer/repo/: repo_maker.py
src/portal_tool/registry/: registry_update.py
src/portal_tool/shit/ports/portal-serialization/: portfile.cmake
src/portal_tool/templates/repo/bootstrap/{{ cookiecutter.project_slug }}/: vcpkg.json
src/portal_tool/templates/repo/bootstrap/{{ cookiecutter.project_slug }}/overlay-ports/: arm64-osx.cmake  x64-linux.cmake
src/portal_tool/templates/vcpkg/: portfile.cmake-features.j2  portfile.cmake.j2  usage.j2  vcpkg-configuration.json.j2
