[tool.poetry]
name = "portal_tool"
version = "0.0.8"
description = "Assortment of tools for the Portal project"
authors = ["Jonatan Nevo <jonatannevo-git@proton.me>"]
readme = "README.md"
packages = [
    { include = "portal_tool" }
]
include = [
    "portal_tool/templates/*.j2"
]

[tool.poetry.dependencies]
python = "^3.13"
jinja2 = "^3.1.6"
pydantic = "^2.11.4"
typer = "^0.15.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
portal-tool = "portal_tool.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
